fix color contrast

--- a/style/style.scss
+++ b/style/style.scss
@@ -28,7 +28,7 @@
     gap: 1rem;
 
     .description {
-        color: grey;
+        color: #595959;
         font-size: 12px;
         width: 20rem;
         text-align: center;
@@ -58,7 +58,7 @@
     }
 
     .spam {
-        color: rgb(175, 174, 174);
+        color: #595959;
         font-size: 12px;
         width: 20rem;
     }
@@ -85,12 +85,12 @@
     }
 
     .title {
-        color: gray;
+        color: #595959;
         font-size: 14px;
     }
 
     .quote {
-        color: grey;
+        color: #595959;
         text-align: center;
         font-size: 12px;
         width: 20rem;
